--- a/pages/p1.html
+++ b/pages/p1.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/index-dist.css" />
-    <link rel="stylesheet" href="../css/p1-dist.css" />
+    <link rel="stylesheet" href="../css/p1.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/453e4b626a.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -74,6 +74,7 @@
     </div>
 
 
+
     <div id="ProjectImage">
         <section class="container_middle" data-aos="zoom-in">
 
@@ -99,8 +100,6 @@
             <div>
                 <img class="imgMiddle" alt="middle image of plant" src="../images/167-P5.png">
             </div>
-
-
         </section>
 
 
@@ -212,6 +211,7 @@
         </footer>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     </div>
+
     <div class="social-Media">
         <a href="https://github.com/2EZ4RTZzz"><i class="fa-brands fa-github"></i></a>
         <a href="https://www.instagram.com/2ez_4rtz_/"><i class="fa-brands fa-square-instagram"></i></a>
