--- a/pages/p2.html
+++ b/pages/p2.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/index-dist.css" />
-    <link rel="stylesheet" href="../css/p1-dist.css" />
+    <link rel="stylesheet" href="../css/p1.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/453e4b626a.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -53,19 +53,19 @@
 
 
 
-    <div id="me">
+    <div id="me" >
         <div>
             <div>
                 <p class="MynameFontSize">Fantasy RPG Game</p>
             </div>
             <h1>
                 Escaper<br />
-                Discover clues,solve puzzles,accomplish tasks
+                Discovery, puzzles , accomplish tasks
             </h1>
-            <p>
+            <p> 
                 ​An adventurer named Howard is invited to visit a famous merchant's castle, but the merchant is a demon
                 who traps Howard and the other adventurers in the evil castle. Howard needs to find a way out of the
-                castle of evil.
+                castle of evil.      
             </p>
 
             <div class="btn"><a href="#ProjectImage">Check out my projects!</a></div>
